# pyINLA

./: .gitattributes  .gitignore  DEV_README.md  LICENSE  README.md  environment.yml  justfile  pyproject.toml
.github/workflows/: tests.yaml
examples/: run_alex.sh  run_daint.sh  run_daint_saved.sh  run_example_daint_alps.sh  save_to_file.py  test_finite_difference_batching.py  test_sparse_spd_matrix.py
examples/batching_exploration/: exploration_batching_finite_diff.py  slurm_bench.sh
examples/brainiac/: convert_data_types.py  generate_data.py  generate_y.py  run.py  y.npy
examples/coreg_small/: data_preprocessing.py  matrix_utilities.py  postprocessing.py  preprocessing.py  run.py  run_spatial.py
examples/examples_utils/: infos_utils.py  parser_utils.py
examples/gaussian_regression/: config.toml  postprocessing.py  preprocessing.py  sandbox_gaussian_regression.py
examples/gaussian_regression_example/: config.toml  postprocessing.py  preprocessing.py  sandbox_gaussian_regression.py  todi_run_script.sh
examples/gaussian_spatio_temporal_bench/: alex_run_script.sh  bind_todi.sh  fritz_run_script.sh  nsys.sh  run.py  todi_run_script.sh
examples/gaussian_spatio_temporal_large_scale/: config.toml  run.py
examples/gaussian_spatio_temporal_medSize/: alex_run_script.sh  config.toml  sandbox_gaussian_spatioTemporal_medSize.py  todi_run_script.sh
examples/gaussian_spatio_temporal_medium_scale/: config.toml  run.py
examples/gr/: README.MD  run.py  y.npy
examples/gs_coreg2_small/: run.py
examples/gs_coreg3_small/: run.py
tests/: README.md  conftest.py
(+235 files in other folders)
