[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyINLA"
authors = [
    { name = "Lisa Gaedke-Merzhaeuser", email = "lisa.gaedke.merzhaeuser@usi.ch" },
    { name = "Vincent Maillou", email = "vmaillou@iis.ee.ethz.ch" },
]
description = "Python implementation of the method of integrated nested Laplace approximations (INLA)"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["INLA", "Bayesian", "statistics"]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.2",
    "scipy",
    "matplotlib",
    "autograd",
    "pydantic",
    "pytest",
    "pytest-cov",
    "pytest-mpi",
    "pytest-xdist",
    "coverage",
    "black",
    "isort",
    "ruff",
    "just",
    "pre-commit",
]
[project.optional-dependencies]
mpi4py = ["mpi4py"]
cupy = ["cupy==13.2.0"]
serinv = ["serinv @ git+https://github.com/vincent-maillou/serinv"]

[project.urls]
Code = "https://github.com/lisa-gm/pyINLA"

[tool.setuptools.dynamic]
version = { attr = "pyinla.__about__.__version__" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.isort]
profile = "black"